<resources>
    <string name="app_name">NewDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name">Name</string>
    <string name="name_of_item">Name of Item</string>
    <string name="date_to_complete_by">Date to complete by</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="name_of_categories">Name Of Categories</string>
    <string name="name_of_category">Name Of Category</string>
    <string name="time_to_remind_at">Time to remind at</string>
    <string name="time">Time</string>
    <string name="category_of_item">Category of item</string>
    <string name="category">Category</string>
    <string name="time_to_remind_at_daily">Time to Remind At Daily</string>
    <string name="none">None</string>
</resources>
