<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_creating_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_alignParentBottom="true"
    tools:context="com.newday.chaminc.CreatingTodo">

    <View
        android:id="@+id/backgroundCreating"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/name_of_item"
                android:textSize="19sp"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="46dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textCapWords|textMultiLine"
                android:textColor="@color/colorGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/editText"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Date To Remind At"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="46dp"
                android:layout_below="@id/nameTitle2"
                android:background="@drawable/rounded_corner"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorGrey"
                android:text="@string/date"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18.5sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/nameTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_below="@id/textView"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/time_to_remind_at"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="46dp"
                android:layout_below="@id/nameTitle3"
                android:background="@drawable/rounded_corner"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorGrey"
                android:text="@string/time"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18.5sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/nameTitle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_below="@id/textView2"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Remind Daily?"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_below="@id/nameTitle6"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="46dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center_vertical"
                android:textColor="@color/colorGrey"
                android:textSize="18.5sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTitle6"
                android:layout_alignTop="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorGrey"
                android:textColorHint="@color/colorGrey"
                android:textSize="18.5sp" />

            <TextView
                android:id="@+id/nameTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_below="@id/switch1"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/category_of_item"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="46dp"
                android:layout_below="@id/nameTitle4"
                android:background="@drawable/rounded_corner"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorGrey"
                android:text="@string/none"
                android:textSize="18.5sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textMultiLine"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/ic_baseline_brightness_1_24"/>

            <TextView
                android:id="@+id/nameTitle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_below="@id/textView3"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Notes About Item"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_below="@id/nameTitle5"
                android:layout_marginRight="46dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/rounded_corner"
                android:foregroundGravity="center|left"
                android:hint="Notes"
                android:inputType="text|textCapSentences|textMultiLine"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="gravity"
                android:textColor="@color/colorGrey"
                android:textSize="19sp" />


        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/doneFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:layout_anchorGravity="bottom"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:src="@drawable/ic_round_check_24"
            android:tint="@android:color/white" />
    </ScrollView>


</RelativeLayout>