<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundCategories">
    </View>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/name_of_category"
            android:textSize="19sp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameTitle"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:ems="10"
            android:inputType="textCapWords|textMultiLine"
            android:hint="@string/name"
            android:textColor="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_below="@id/editText"
            android:text="Color of Category"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_corner"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorGrey"
            android:text="@string/color"
            android:layout_below="@id/nameTitle2"
            android:textSize="18.5sp"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableRight="@drawable/ic_baseline_brightness_1_24"/>
        </RelativeLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/doneFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:layout_anchorGravity="bottom"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:src="@drawable/ic_round_check_24"
            android:tint="@android:color/white" />
    </ScrollView>
</RelativeLayout>