<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/backgroundTodoItemViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:hyphenationFrequency="normal"
                android:layout_marginTop="40dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/name_of_item"
                android:textSize="35sp"/>


            <TextView
                android:id="@+id/nameTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="Date To Remind Until"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/dateToCompleteByImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/editText"
                android:layout_marginRight="-90dp"
                android:layout_toStartOf="@+id/nameTitle2"
                android:layout_toLeftOf="@+id/nameTitle2"
                android:src="@drawable/ic_round_today_24" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/nameTitle2"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/date"
                android:textColor="@color/colorGrey"
                android:textSize="18.5sp" />

            <TextView
                android:id="@+id/nameTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/time_to_remind_at"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/timeToRemindAtImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView"
                android:layout_marginRight="-90dp"
                android:layout_toStartOf="@+id/nameTitle3"
                android:layout_toLeftOf="@+id/nameTitle3"
                android:tint="@color/colorLightGrey"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTitle3"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/time"
                android:inputType="textMultiLine"
                android:textColor="@color/colorGrey"
                android:textSize="18.5sp" />

            <TextView
                android:id="@+id/nameTitle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="Remind Daily?"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/remindDailyImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView2"
                android:layout_marginRight="-90dp"
                android:layout_toStartOf="@+id/nameTitle4"
                android:layout_toLeftOf="@+id/nameTitle4"
                android:src="@drawable/ic_round_alarm_24" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/nameTitle6"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-1dp"
                android:text="No"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorGrey"
                android:textSize="18.5sp" />


            <TextView
                android:id="@+id/nameTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/category_of_item"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTitle4"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/none"
                android:textColor="@color/colorGrey"
                android:textSize="18.5sp" />

            <ImageView
                android:id="@+id/categoryOfItemImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView5"
                android:layout_marginRight="-90dp"
                android:layout_toStartOf="@+id/nameTitle4"
                android:layout_toLeftOf="@+id/nameTitle4"
                android:src="@drawable/ic_round_folder_special_24" />


            <TextView
                android:id="@+id/nameTitle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="Notes About Item"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTitle5"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="25dp"
                android:hint="Notes"
                android:clickable="false"
                android:inputType="none"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="gravity"
                android:textColor="@color/colorGrey"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/notesAboutItemImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView3"
                android:layout_marginRight="-90dp"
                android:layout_toStartOf="@+id/nameTitle5"
                android:layout_toLeftOf="@+id/nameTitle5"
                android:src="@drawable/ic_round_note_24" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/shareFAB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView4"
    android:layout_centerInParent="true"
    android:src="@drawable/ic_round_share_24"
    android:tint="@color/white"
    android:layout_marginBottom="25dp"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

           </RelativeLayout>



    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

</RelativeLayout>